add position fixed

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ nav {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    position: fixed;
 }
 .menu-item {
     text-decoration: none;
