--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: white;
+    font-family: "Open Sans",Arial,sans-serif;
 }
 header {
     background-image: url("https://content.eturia.ro/images/location/ee19c936-2285-4c73-9122-d08c8db28104/c85d60aa3301c6941b21f93db25b7025/1920x1080.webp");
@@ -18,6 +19,7 @@ nav {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     padding: 1rem;
     margin: 0;
     border-block-end: 1px solid white;
@@ -65,6 +67,15 @@ p {
 }
 article {
     background-color: pink;
+    margin-inline: auto;
+}
+.content-item {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+
 }
 footer {
     height: 10rem;
@@ -73,7 +84,7 @@ footer {
 
 }
 
-@media (min-width: 7px) {
+@media (min-width: 712px) {
     nav {
         justify-content: flex-end;
         border-block-end: none;
@@ -81,25 +92,33 @@ footer {
     main {
         display: grid;
         grid-template-areas: 
-                        "text H1"
-                        "paragraph" 
-        "CONTENT-ITEM CONTENT-ITEM CONTENT-ITEM"
-        "CONTENT-ITEM CONTENT-ITEM CONTENT-ITEM"
-        "CONTENT-ITEM CONTENT-ITEM CONTENT-ITEM"
-        "CONTENT-ITEM CONTENT-ITEM CONTENT-ITEM";
+         "ARTICOL" 
+        "CONTAINERE";
     }
     .content-item {
         grid-area: CONTENT-ITEM;
-        width: 25vw;
+        width: 27vw;
     }
     .menu-item {
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
     article {
         width: 90vw;
         padding: 1rem;
         border-radius: 1rem;
         margin-block-start: 1rem;
+        grid-area: ARTICOL;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .containers {
+        grid-area: CONTAINERE;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
     }
     h1 {
         grid-area: text H1;
