--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav {
 }
 header h1 {
     margin: auto;
-    font-size: 6rem;
+    font-size: 2.7rem;
     font-weight: bold;
     color:rgba(255, 255, 255, 0.3);
     text-transform: uppercase;
@@ -148,5 +148,8 @@ footer {
     }
     p {
         grid-area: paragraph;
+    }
+    header h1 {
+        font-size: 6rem;
     }
 }
