--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ nav {
     justify-content: center;
     align-items: center;
 }
+
 header h1 {
     margin: auto;
     font-size: 2.7rem;
@@ -41,6 +42,7 @@ header h1 {
     color:rgba(255, 255, 255, 0.3);
     text-transform: uppercase;
     font-family: "Playfair Display",Georgia,serif;
+    margin-block-end: 0;
 }
 header h2 {
     margin: auto;
@@ -49,7 +51,9 @@ header h2 {
     color:rgb(255, 255, 255);
     text-transform: uppercase;
     font-family: "Playfair Display",Georgia,serif;
+    margin-block-start: 0;
 }
+
 main {
     display: flex;
     flex-direction: column;
@@ -90,8 +94,9 @@ article {
     align-items: center;
     width: 80vw;
     height: 40vh;
-    background-color: bisque;
-    border: none;
+    background-color:white;
+    border: 1px solid grey;
+    box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
     border-radius: 1rem;
     padding: 1.5rem;
     margin: 1rem;
@@ -101,9 +106,11 @@ article {
     border-radius: 1rem;
 }
 footer {
-    height: 10rem;
+    height: 3rem;
     width: auto;
-    background-color: grey;
+    background-color: rgb(191, 188, 188);
+    padding: 1rem;
+    margin-block-start: 2rem;
 
 }
 
@@ -121,6 +128,9 @@ footer {
     .content-item {
         grid-area: CONTENT-ITEM;
         width: 27vw;
+    }
+    .content-item img {
+        height: 70%;
     }
     .menu-item {
         font-size: 1rem;
