--- a/style.css
+++ b/style.css
@@ -113,6 +113,11 @@ footer {
     margin-block-start: 2rem;
 
 }
+@media (min-width: 500px) {
+    header h1 {
+        font-size: 4rem;
+    }
+}
 
 @media (min-width: 712px) {
     header {
@@ -133,7 +138,8 @@ footer {
         width: 27vw;
     }
     .content-item img {
-        height: 70%;
+        height: 100%;
+        width: 100%;
     }
     .menu-item {
         font-size: 1rem;
