--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@ article {
     margin: 1rem;
 }
 .content-item img {
-    height: 85%;
+    height: 27vh;
+    width: auto;
     border-radius: 1rem;
 }
 footer {
@@ -116,6 +117,22 @@ footer {
 @media (min-width: 500px) {
     header h1 {
         font-size: 4rem;
+    }
+    .content-item img {
+        height: 33vh;
+        width: auto;
+    }
+}
+@media (min-width: 600px) {
+    header h1 {
+        font-size: 5rem;
+    }
+    .content-item {
+        height: 60vh;
+    }
+    .content-item img {
+        height: 47vh;
+        width: auto;
     }
 }
 
@@ -135,11 +152,11 @@ footer {
     }
     .content-item {
         grid-area: CONTENT-ITEM;
-        width: 27vw;
+        width: 37vw;
+        height: 40vh;
     }
-    .content-item img {
-        height: 100%;
-        width: 100%;
+   .content-item img {
+        height: 85%;
     }
     .menu-item {
         font-size: 1rem;
@@ -170,5 +187,17 @@ footer {
     }
     header h1 {
         font-size: 6rem;
+    }
+}
+@media (min-width: 900px) {
+    header h1 {
+        font-size: 5rem;
+    }
+    .content-item {
+        height: 40vh;
+    }
+    .content-item img {
+        height: 35vh;
+        width: auto;
     }
 }
