--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ nav {
     margin: 1rem;
     justify-content: center;
     align-items: center;
+    transition: transform 2s;
+}
+.menu-item:hover {
+    font-size: 1.2rem;
+    color: red;
+    border-block-end: 1px solid white;
 }
 
 header h1 {
@@ -43,6 +49,10 @@ header h1 {
     text-transform: uppercase;
     font-family: "Playfair Display",Georgia,serif;
     margin-block-end: 0;
+    transition: transform 3s;
+}
+header h1:hover {
+    transform: scale(130%);
 }
 header h2 {
     margin: auto;
@@ -52,6 +62,10 @@ header h2 {
     text-transform: uppercase;
     font-family: "Playfair Display",Georgia,serif;
     margin-block-start: 0;
+    transition: transform 3s;
+}
+header h2:hover{
+    transform: translateY(-1rem);
 }
 
 main {
@@ -105,6 +119,14 @@ article {
     height: 27vh;
     width: auto;
     border-radius: 1rem;
+    transition: transform 1s;
+}
+.content-item img:hover {
+    transform: scale(105%);
+}
+.content-item p:hover {
+    color: black;
+    font-weight: bold;
 }
 footer {
     height: 3rem;
@@ -191,7 +213,7 @@ footer {
 }
 @media (min-width: 900px) {
     header h1 {
-        font-size: 5rem;
+        font-size: 7rem;
     }
     .content-item {
         height: 40vh;
