--- a/reykjavik.css
+++ b/reykjavik.css
@@ -43,3 +43,10 @@ main h1 {
     align-items: center;
 
 }
+footer {
+    height: 3rem;
+    width: auto;
+    background-color: rgb(191, 188, 188);
+    padding: 1rem;
+    margin-block-start: 2rem;
+}
