--- a/reykjavik.css
+++ b/reykjavik.css
@@ -11,7 +11,12 @@ body {
     min-height: calc(100vh - 2 * var(--margin));
     width: 60vw;
     margin-inline: auto;
+    background-color:  #f7f7f7;
+    color:  #11316c;
     box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
+    font-family: Fira Sans,-apple-system,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-size: 1rem;
+    line-height: 22px;
 }
 nav {
     width: 100%;
@@ -70,7 +75,6 @@ main {
 main h1 {
     justify-content: center;
     align-items: center;
-
 }
 main img {
     width: 60%;
@@ -79,6 +83,14 @@ main img {
     margin-inline: auto;
     padding: 1rem;
     box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
+    margin-block-end: 1rem;
+}
+main p {
+    margin-block-end: 1rem;
+}
+#ziua {
+    font-weight: bold;
+    font-size: 1.5rem;
 }
 footer {
     height: 3rem;
