--- a/reykjavik.css
+++ b/reykjavik.css
@@ -9,16 +9,16 @@ body {
     --margin: 5rem;
 
     min-height: calc(100vh - 2 * var(--margin));
-    width: 60vw;
+    width: 95vw;
     margin-inline: auto;
     background-color:  #f7f7f7;
     color:  #11316c;
     box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
     font-family: Fira Sans,-apple-system,Helvetica Neue,Helvetica,Arial,sans-serif;
     font-size: 1rem;
-    line-height: 22px;
 }
 nav {
+    height: 5vh;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -34,16 +34,15 @@ nav {
     color: white;
 }
 header {
-    height: 25rem;
+    height: 50vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
     background-image: url("https://content.eturia.ro/images/location/ee19c936-2285-4c73-9122-d08c8db28104/c85d60aa3301c6941b21f93db25b7025/1920x1080.webp");
 }
 header h1 {
-    margin: auto;
-    font-size: 2.7rem;
+    margin-inline: auto;
+    margin-block-start: 25%;
+    font-size: 2.6rem;
     font-weight: bold;
     color:rgba(255, 255, 255, 0.3);
     text-transform: uppercase;
@@ -54,14 +53,12 @@ header h1:hover {
     transform: scale(130%);
 }
 header h2 {
-    margin: auto;
-    font-size: 3rem;
+    margin-inline: auto;
+    font-size: 2.4rem;
     font-weight: bold;
     color:rgb(255, 255, 255);
     text-transform: uppercase;
     font-family: "Playfair Display",Georgia,serif;
-    justify-content: center;
-    align-items: flex-start;
     transition: transform 3s;
 }
 header h2:hover{
@@ -77,7 +74,7 @@ main h1 {
     align-items: center;
 }
 main img {
-    width: 60%;
+    width: 80%;
     height: auto;
     border-radius: 1rem;
     margin-inline: auto;
