--- a/reykjavik.css
+++ b/reykjavik.css
@@ -41,7 +41,7 @@ header {
 }
 header h1 {
     margin-inline: auto;
-    margin-block-start: 25%;
+    margin-block-start: 15%;
     font-size: 2.6rem;
     font-weight: bold;
     color:rgba(255, 255, 255, 0.3);
@@ -54,6 +54,7 @@ header h1:hover {
 }
 header h2 {
     margin-inline: auto;
+    margin-block-start: 0;
     font-size: 2.4rem;
     font-weight: bold;
     color:rgb(255, 255, 255);
@@ -95,4 +96,19 @@ footer {
     background-color: rgb(191, 188, 188);
     padding: 1rem;
     margin-block-start: 2rem;
+}
+@media (min-width: 600px) {
+    header h1 {
+        font-size: 4rem;
+    }
+}
+@media (min-width: 800px) {
+    header h1 {
+        margin-block-start: 10%;
+    }
+}
+@media (min-width: 800px) {
+    header h1 {
+        margin-block-start: 5%;
+    }
 }
