--- a/reykjavik.css
+++ b/reykjavik.css
@@ -27,7 +27,7 @@ nav {
 .menu-item {
     text-decoration: none;
     color: black;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     text-transform: uppercase;
     padding: 1rem;
@@ -101,14 +101,11 @@ footer {
     header h1 {
         font-size: 4rem;
     }
-}
 @media (min-width: 800px) {
+    .wrapper {
+        width: 70vw;
+    }
     header h1 {
         margin-block-start: 10%;
-    }
-}
-@media (min-width: 800px) {
-    header h1 {
-        margin-block-start: 5%;
     }
 }
