--- a/descopera.css
+++ b/descopera.css
@@ -63,6 +63,14 @@ body {
     header h2:hover{
         transform: translateY(-1rem);
     }
+    .item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: grey;
+        border-radius: 2rem;
+        padding: 1px;
+    }
     .text {
         width:70vw;
         height: auto;
@@ -75,6 +83,15 @@ body {
         margin-inline: auto;
         font-size: 3rem;
     }
+    
+    footer {
+        height: 3rem;
+        width: auto;
+        background-color: rgb(191, 188, 188);
+        padding: 1rem;
+        margin-block-start: 2rem;
+    }
+@media (min-width: 1100px) {
     .item {
         border: 1px solid grey;
         border-radius: 3rem;
@@ -99,10 +116,4 @@ body {
         grid-area: TITLU;
         margin-inline: auto;
     }
-    footer {
-        height: 3rem;
-        width: auto;
-        background-color: rgb(191, 188, 188);
-        padding: 1rem;
-        margin-block-start: 2rem;
     }
