--- a/descopera.css
+++ b/descopera.css
@@ -77,6 +77,9 @@ body {
     .item h2 {
         text-align: center;
     }
+    .item img {
+        border-radius: 2rem;
+    }
     .text {
         width:70vw;
         height: auto;
