--- a/descopera.css
+++ b/descopera.css
@@ -103,6 +103,11 @@ body {
         padding: 1rem;
         margin-block-start: 2rem;
     }
+@media (min-width: 800px) {
+    header h1 {
+        font-size: 5rem;
+    }
+}
 @media (min-width: 1100px) {
     .item {
         border: 1px solid grey;
@@ -127,5 +132,8 @@ body {
     .text h2 {
         grid-area: TITLU;
         margin-inline: auto;
+    }
+    header h1 {
+        font-size: 5rem;
     }
     }
