--- a/descopera.css
+++ b/descopera.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     padding: 0;
 }
-
     header {
         background-image: url("../poze_descopera/poza_aurora_boreala.jpg");
         height: 100vh;
@@ -17,8 +16,6 @@ body {
         align-items: center;
         flex-wrap: wrap;
         padding: 1rem;
-        margin: 0;
-        border-block-end: 1px solid white;
     }
     .menu-item {
         text-decoration: none;
@@ -106,6 +103,9 @@ body {
 @media (min-width: 450px) {
     header h1 {
         font-size: 4rem;
+    }
+    nav {
+        justify-content: flex-end;
     }
 }
 @media (min-width: 1100px) {
