--- a/descopera.css
+++ b/descopera.css
@@ -78,7 +78,7 @@ body {
         border-radius: 2rem;
     }
     .text {
-        width:70vw;
+        width:95vw;
         height: auto;
         margin-inline: auto;
         display: flex;
@@ -106,6 +106,9 @@ body {
     }
     nav {
         justify-content: flex-end;
+    }
+    .text {
+        width: 80vw;
     }
 }
 @media (min-width: 1100px) {
@@ -138,5 +141,8 @@ body {
     }
     .menu-item {
         font-size: 1.5rem;
+    }
+    .text {
+        width: 70vw;
     }
     }
