--- a/descopera.css
+++ b/descopera.css
@@ -76,6 +76,10 @@ body {
     }
     .item img {
         border-radius: 2rem;
+        margin-block: auto;
+    }
+    .item p {
+        margin-block: 0;
     }
     .text {
         width:95vw;
