--- a/reykjavik.css
+++ b/reykjavik.css
@@ -25,7 +25,7 @@ nav {
     justify-content: flex-end;
     align-items: center;
     padding: 1rem;
-    margin: 0;
+    gap: 1rem;
     box-sizing: border-box;
 }
 .menu-item {
