--- a/style.css
+++ b/style.css
@@ -141,6 +141,10 @@ footer {
     padding: 1rem;
     margin-block-start: 2rem;
 }
+#heart {
+    font-size: 1rem;
+    animation: heart 3s infinite;
+}
 @media (min-width: 500px) {
     header h1 {
         font-size: 4rem;
@@ -160,6 +164,9 @@ footer {
     .content-item img {
         height: 47vh;
         width: auto;
+    }
+    header {
+        background-image: url("islanda_house.jpg");
     }
 }
 
@@ -227,4 +234,35 @@ footer {
         height: 35vh;
         width: auto;
     }
+}
+@keyframes heart {
+    0% {
+        animation-timing-function: linear;
+        font-size: 1.2rem;
+    }
+    20% {
+        animation-timing-function: linear;
+        font-size: 1.5rem;
+    }
+    40% {
+        animation-timing-function: linear;
+        font-size: 1.8rem;
+    }
+    60% {
+        animation-timing-function: linear;
+        font-size: 2rem;
+    }
+    80% {
+        animation-timing-function: linear;
+        font-size: 1.8rem;
+    }
+    90% {
+        animation-timing-function: linear;
+        font-size: 1.5rem;
+    }
+    100% {
+        animation-timing-function: linear;
+        font-size: 1rem;
+    }
+    
 }
