--- a/descopera.css
+++ b/descopera.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: "Open Sans",Arial,sans-serif;
 }
     header {
         background-image: url("../poze_descopera/poza_aurora_boreala.jpg");
@@ -16,6 +17,7 @@ body {
         align-items: center;
         flex-wrap: wrap;
         padding: 1rem;
+        border-block-end: 1px solid rgba(255,255,255,0.3);
     }
     .menu-item {
         text-decoration: none;
@@ -144,7 +146,7 @@ body {
         font-size: 5rem;
     }
     .menu-item {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
     .text {
         width: 70vw;
