--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
 }
 nav {
     height: 5vh;
+    font-size: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -22,7 +23,7 @@ nav {
     flex-wrap: wrap;
     padding: 1rem;
     margin: 0;
-    border-block-end: 1px solid white;
+    border-block-end: 1px solid rgba(255,255,255,0.3);
 }
 .menu-item {
     text-decoration: none;
@@ -166,7 +167,10 @@ footer {
         width: auto;
     }
     header {
-        background-image: url("islanda_house.jpg");
+        background-image: url("../poze_index/islanda_house.jpg");
+    }
+    nav {
+        background-color: rgba(67, 66, 66, 0.3);
     }
 }
 
