--- a/reykjavik.css
+++ b/reykjavik.css
@@ -23,7 +23,7 @@ nav {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     padding: 1rem;
     gap: 1rem;
@@ -82,8 +82,7 @@ main {
     flex-direction: column;
 }
 main h1 {
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 main img {
     width: 80%;
@@ -108,9 +107,16 @@ footer {
     padding: 1rem;
     margin-block-start: 2rem;
 }
+#heart {
+    font-size: 1rem;
+    animation: heart 3s infinite;
+}
 @media (min-width: 600px) {
     header h1 {
         font-size: 4rem;
+    }
+    nav {
+        justify-content: flex-end;
     }
 @media (min-width: 800px) {
     .wrapper {
@@ -120,4 +126,35 @@ footer {
         margin-block-start: 10%;
     }
 }
+}
+@keyframes heart {
+    0% {
+        animation-timing-function: linear;
+        font-size: 1.2rem;
+    }
+    20% {
+        animation-timing-function: linear;
+        font-size: 1.5rem;
+    }
+    40% {
+        animation-timing-function: linear;
+        font-size: 1.8rem;
+    }
+    60% {
+        animation-timing-function: linear;
+        font-size: 2rem;
+    }
+    80% {
+        animation-timing-function: linear;
+        font-size: 1.8rem;
+    }
+    90% {
+        animation-timing-function: linear;
+        font-size: 1.5rem;
+    }
+    100% {
+        animation-timing-function: linear;
+        font-size: 1rem;
+    }
+    
 }
