--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ main {
 }
 h1 {
     display: block;
+    text-align: center;
     margin: 1rem 1rem;
     font-family: "Open Sans",Arial,sans-serif;
     font-size: 1rem;
@@ -178,6 +179,7 @@ footer {
     nav {
         justify-content: flex-end;
         border-block-end: none;
+        background-color: rgba(255,255,255,0);
     }
     main {
         display: grid;
