--- a/reykjavik.css
+++ b/reykjavik.css
@@ -92,6 +92,11 @@ main img {
     padding: 1rem;
     box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
     margin-block-end: 1rem;
+    transition: transform 2s;
+}
+main img:hover {
+    transform: scale(101%);
+    box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(13, 213, 213, 0.5);
 }
 main p {
     margin-block-end: 1rem;
