--- a/descopera.css
+++ b/descopera.css
@@ -35,7 +35,6 @@ body {
         color: red;
         border-block-end: 1px solid white;
     }
-    
     header h1 {
         margin: auto;
         font-size: 2.7rem;
@@ -89,13 +88,13 @@ body {
         margin-inline: auto;
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1.5rem;
     }
     .text h2 {
         text-align: center;
     }
     .text h1 {
-        margin-inline: auto;
+        margin:1rem auto 0;
         font-size: 3rem;
     }
     
@@ -154,6 +153,39 @@ body {
     }
     .text {
         width: 70vw;
+    }
+    .main_paragraph {
+        display: grid;
+        grid-template-areas: 
+        "paragraf1 . paragraf2 . paragraf3";
+        border-radius: 1rem;
+        padding-inline: 1rem;
+        margin-block: 0;
+        gap: 1rem;
+    }
+    #paragraf1 {
+        border-radius: 2rem;
+        background-color: rgb(242, 241, 241);
+        padding: 1.5rem;
+        border: 1px solid gray;
+        box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
+        grid-area: paragraf1;
+    }
+    #paragraf2 {
+        border-radius: 2rem;
+        background-color: rgb(242, 241, 241);
+        padding: 1.5rem;
+        border: 1px solid gray;
+        box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
+        grid-area: paragraf2;
+    }
+    #paragraf3 {
+        border-radius: 2rem;
+        background-color: rgb(242, 241, 241);
+        padding: 1.5rem;
+        border: 1px solid gray;
+        box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
+        grid-area: paragraf3;
     }
     }
     @keyframes heart {
