--- a/descopera.css
+++ b/descopera.css
@@ -3,113 +3,82 @@ body {
     padding: 0;
     font-family: "Open Sans",Arial,sans-serif;
 }
-    header {
-        background-image: url("../poze_descopera/poza_aurora_boreala.jpg");
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-    }
-    nav {
-        height: 5vh;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        padding: 1rem;
-        border-block-end: 1px solid rgba(255,255,255,0.3);
-    }
-    .menu-item {
-        text-decoration: none;
-        color: rgb(247, 243, 243);
-        text-transform: uppercase;
-        font-size: 1rem;
-        font-weight: bold;
-        margin: 1rem;
-        justify-content: center;
-        align-items: center;
-        transition: transform 5s linear;
-    }
-    .menu-item:hover {
-        font-size: 1.5rem;
-        color: red;
-        border-block-end: 1px solid white;
-    }
-    header h1 {
-        margin: auto;
-        font-size: 2.7rem;
-        font-weight: bold;
-        color:rgba(255, 255, 255, 0.3);
-        text-transform: uppercase;
-        font-family: "Playfair Display",Georgia,serif;
-        margin-block-end: 0;
-        transition: transform 3s;
-    }
-    header h1:hover {
-        transform: scale(130%);
-    }
-    header h2 {
-        margin: auto;
-        font-size: 3rem;
-        font-weight: bold;
-        color:rgb(255, 255, 255);
-        text-transform: uppercase;
-        font-family: "Playfair Display",Georgia,serif;
-        margin-block-start: 0;
-        transition: transform 3s;
-    }
-    header h2:hover{
-        transform: translateY(-1rem);
-    }
-    .item {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        background-color: rgb(242, 241, 241);
-        border-radius: 2rem;
-        padding: 1px;
-        box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
-        box-sizing: border-box;
-        padding-inline: 1rem;
-    }
-    .item h2 {
-        text-align: center;
-    }
-    .item img {
-        border-radius: 2rem;
-        margin-block: auto;
-    }
-    .item p {
-        margin-block: 0;
-        padding: 1rem;
-    }
-    .text {
-        width:95vw;
-        height: auto;
-        margin-inline: auto;
-        display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
-    }
-    .text h2 {
-        text-align: center;
-    }
-    .text h1 {
-        margin:1rem auto 0;
-        font-size: 3rem;
-    }
-    
-    footer {
-        height: 3rem;
-        width: auto;
-        background-color: rgb(191, 188, 188);
-        padding: 1rem;
-        margin-block-start: 2rem;
-    }
-    #heart {
-        font-size: 1rem;
-        animation: heart 3s infinite;
-    }
+header {
+    background-image: url("../poze_descopera/poza_aurora_boreala.jpg");
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+header h1 {
+    margin: auto;
+    font-size: 2.7rem;
+    font-weight: bold;
+    color:rgba(255, 255, 255, 0.3);
+    text-transform: uppercase;  
+    font-family: "Playfair Display",Georgia,serif;
+    margin-block-end: 0;
+    transition: transform 3s;
+}
+header h1:hover {
+    transform: scale(130%);
+}
+header h2 {
+    margin: auto;
+    font-size: 3rem;
+    font-weight: bold;
+    color:rgb(255, 255, 255);
+    text-transform: uppercase;
+    font-family: "Playfair Display",Georgia,serif;
+    margin-block-start: 0;
+    transition: transform 3s;
+}
+header h2:hover{
+    transform: translateY(-1rem);
+}
+.item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgb(242, 241, 241);
+    border-radius: 2rem;
+    padding: 1px;
+    box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
+    box-sizing: border-box;
+    padding-inline: 1rem;
+    transition: transform 2s;
+}
+.item:hover {
+    transform: scale(101%);
+    box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(13, 213, 213, 0.5);
+}
+.item h2 {
+    text-align: center;
+}
+.item img {
+    border-radius: 2rem;
+    margin-block: auto;
+}
+.item p {
+    margin-block: 0;
+    padding: 1rem;
+}
+.text {
+    width:95vw;
+    height: auto;
+    margin-inline: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    color:  #11316c;
+}
+.text h2 {
+    text-align: center;
+}
+.text h1 {
+    margin:1rem auto 0;
+    font-size: 3rem;
+    text-align: center;
+} 
 @media (min-width: 450px) {
     header h1 {
         font-size: 4rem;
@@ -171,6 +140,7 @@ body {
         border: 1px solid gray;
         box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
         grid-area: paragraf1;
+        transition: transform 2s;
     }
     #paragraf2 {
         border-radius: 2rem;
@@ -179,6 +149,7 @@ body {
         border: 1px solid gray;
         box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
         grid-area: paragraf2;
+        transition: transform 2s;
     }
     #paragraf3 {
         border-radius: 2rem;
@@ -187,36 +158,18 @@ body {
         border: 1px solid gray;
         box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(77, 78, 78, 0.5);
         grid-area: paragraf3;
+        transition: transform 2s;
     }
+    #paragraf1:hover {
+        transform: scale(101%);
+        box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(13, 213, 213, 0.5);
     }
-    @keyframes heart {
-        0% {
-            animation-timing-function: linear;
-            font-size: 1.2rem;
-        }
-        20% {
-            animation-timing-function: linear;
-            font-size: 1.5rem;
-        }
-        40% {
-            animation-timing-function: linear;
-            font-size: 1.8rem;
-        }
-        60% {
-            animation-timing-function: linear;
-            font-size: 2rem;
-        }
-        80% {
-            animation-timing-function: linear;
-            font-size: 1.8rem;
-        }
-        90% {
-            animation-timing-function: linear;
-            font-size: 1.5rem;
-        }
-        100% {
-            animation-timing-function: linear;
-            font-size: 1rem;
-        }
-        
+    #paragraf2:hover {
+        transform: scale(101%);
+        box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(13, 213, 213, 0.5);
+    }
+    #paragraf3:hover {
+        transform: scale(101%);
+        box-shadow: 0.7rem 0.5rem 1rem 0.2rem rgba(13, 213, 213, 0.5);
+    }
     }
