+about+cateva schimbari

--- a/about.css
+++ b/about.css
@@ -1,99 +1,83 @@
+@import url("https://fonts.googleapis.com/css2?family=Explora&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 body {
-    background-image: linear-gradient(to right, #000000, #130f40, #000000);
-    min-height: 100vh;
-  }
-.nav-bar {
-  position: fixed;
-  width: 100%;
-  background-color: black;
-  display: flex;
-  justify-content: space-around;
+  background-image: linear-gradient(to right, #000000, #130f40, #000000);
+  min-height: 100vh;
 }
-.nav-bar img {
-  max-width: 18rem;
-  max-height: 5.4rem;
-  padding-inline-start: 0.3rem;
-}
-.nav-bar nav {
-  display: flex;
-  flex-direction: column;
-}
-.menu-items .menu-item {
-  text-decoration: none;
-  color: white;
-  padding-block: 0.1rem;
-  font-weight: 800;
-}
-.menu-item:hover {
-  transform: scale(110%);
-}
-.video-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    z-index: -1;
-  }
-  
-  .video-background video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    transform: translateX(-50%) translateY(-50%);
-  }
-  
 
-
-
-.container-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  background-color: black;
-  color: white;
-  padding: 0.5rem 1rem;
+main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-block: 1rem 2rem;
 }
-.footer-nav a {
+.career {
   color: white;
-  font-size: 1rem;
-  padding: 0.1rem;
-}
-.locations {
   text-align: center;
-}
-@media (min-width: 600px) {
-  .nav-bar nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.4rem;
-    gap: 1rem;
-  }
+  margin-block: 1.5rem;
+  font-family: "Explora", sans-serif;
+  font-size: 1.5rem;
 }
 
-@media (min-width: 900px) {
-  .nav-bar nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.8rem;
-    gap: 1.4rem;
+.title {
+  color: white;
+  font-size: 2rem;
+  margin-block: 1rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  font-style: italic;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  gap: 2rem;
+}
+.slideshow-first {
+  animation: slideshow-second 10s infinite;
+}
+.slideshow-second {
+  animation: slideshow1 12s infinite;
+}
+
+@keyframes slideshow-second {
+  0% {
+    content: url("incapere1.png");
+    width: 70%;
+  }
+  50% {
+    content: url("incapere3.png");
+    width: 70%;
+  }
+  100% {
+    content: url("incapere4.png");
+    width: 70%;
+  }
+}
+@keyframes slideshow1 {
+  0% {
+    content: url("incapere5.png");
+    width: 70%;
+  }
+  33% {
+    content: url("incapere6.png");
+    width: 70%;
+  }
+  66% {
+    content: url("incapere8.png");
+    width: 70%;
+  }
+  100% {
+    content: url("incapere7.png");
+    width: 70%;
   }
 }
