--- a/index.css
+++ b/index.css
@@ -7,40 +7,19 @@
 body {
   background-image: linear-gradient(to right, #000000, #130f40, #000000);
   min-height: 100vh;
-}
-
-.nav-bar {
-  position: fixed;
-  width: 100%;
-  background-color: black;
-  display: flex;
-  justify-content: space-around;
-}
-.nav-bar img {
-  max-width: 18rem;
-  max-height: 5.4rem;
-  padding-inline-start: 0.3rem;
-}
-.nav-bar nav {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.menu-items .menu-item {
-  text-decoration: none;
-  color: white;
-  padding-block: 0.1rem;
-  font-weight: 800;
-}
-.menu-item:hover {
-  transform: scale(110%);
-}
+
 main {
-  width: 50%;
+  width: 40%;
   height: 25%;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
 }
 .main-container {
   display: grid;
@@ -79,28 +58,6 @@ main {
   animation: slide-in-right 1.4s;
 }
 
-.container-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: black;
-  color: white;
-  padding: 0.5rem 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.footer-nav a {
-  color: white;
-  font-size: 1rem;
-  padding: 0.1rem;
-}
-.locations {
-  text-align: center;
-}
-
 @keyframes slide-in-left {
   0% {
     transform: translateX(-100vw);
@@ -117,27 +74,5 @@ main {
 
   100% {
     transform: translate(0);
-  }
-}
-
-@media (min-width: 600px) {
-  .nav-bar nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.4rem;
-    gap: 1rem;
-  }
-}
-
-@media (min-width: 900px) {
-  .nav-bar nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.8rem;
-    gap: 1.4rem;
   }
 }
