--- a/header.footer.css
+++ b/header.footer.css
@@ -24,7 +24,7 @@
     transform: scale(110%);
   }
   .container-footer {
-
+    position: sticky;
     bottom: 0;
     width: 100%;
     background-color: black;
