--- a/style.css
+++ b/style.css
@@ -262,9 +262,11 @@ h1 {
   color: var(--off-white);
 }
 .main-content {
-  padding-top: 5rem;
   background: var(--tertiary-color);
-  padding-inline: 1rem;
+  padding: 5rem 1rem;
+  gap: 3rem;
+  display: flex;
+  flex-direction: column;
 }
 .breadcrumb {
   font: 1rem var(--font-body);
@@ -288,8 +290,37 @@ h1 {
   content: "/";
   color: var(--body-text-color);
 }
+.container-content {
+  display: grid;
+  grid-template-columns:  repeat(auto-fit, minmax(200px, 1fr));
+  gap: 3rem;
+}
+.container-content img {
+  order: -1;
+  width: 100%;
+  box-shadow: -20px 20px 0px var(--secondary-color);
+}
+.content-intro {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.content-t, .content-d {
+  color: var(--body-text-color);
+  font-weight: 300;
+}
+.types-of-interventions.detail-page {
+  padding: 0;
+}
+.detail-page h1 {
+  font: 1.5rem var(--font-headers);
+  font-weight: 500;
+}
 /* Responsive */
 @media (min-width: 48rem) {
+  .container-content img {
+    order: 0;
+  }
   .hero-content {
     grid-column: 1 / 3;
     gap: 3rem;
