--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400;700&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Oooh+Baby&display=swap");
 :root {
-  --font-logo: 2rem "Oooh Baby", cursive;
+  --font-logo: "Oooh Baby", cursive;
   --font-headers: "Cormorant Garamond", serif;
   --font-body: "Biryani", sans-serif;
   --body-text-color: #474747; /* Charcoal color for text/dark */
   --main-color: #f5f3ed; /* Oyster color for backgrounds */
-  --color-pop: rgba(215,181,140,1); /* Honey color for contrast  */
+  --color-pop: rgba(215, 181, 140, 1); /* Honey color for contrast  */
   --secondary-color: #e2d3c0; /* Toast color for dark accents */
   --tertiary-color: #eae3d9; /* Nude color for mid accents */
+  --accent-color: rgba(43, 51, 73, 1); /*Dark blue for contrast accent */
   --off-white: #f9f7f4; /* Ivory color for light accents */
 }
 html {
@@ -18,7 +19,10 @@ html {
   margin: 0;
 }
 .wrapper {
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: var(--tertiary-color);
 }
 /* Header + nav*/
 header {
@@ -82,7 +86,7 @@ nav a:hover {
   gap: 1rem;
 }
 .logo p {
-  font: var(--font-logo);
+  font: 2rem var(--font-logo);
   font-weight: 600;
   letter-spacing: 0.05em;
   color: var(--body-text-color);
@@ -103,7 +107,6 @@ nav a:hover {
   grid-template-columns: repeat(3, 1fr);
   align-content: center;
   height: 100vh;
-  background: var(--off-white);
 }
 .hero-image,
 .hero-content {
@@ -116,6 +119,7 @@ nav a:hover {
   z-index: 1;
   padding: 1.5rem;
   display: grid;
+  max-width: 35rem;
   gap: 2rem;
   background-color: var(--off-white);
   margin-inline: 1rem;
@@ -184,35 +188,28 @@ nav a:hover {
   left: 0px;
 }
 .read-more-button {
-  font: 1rem var(--font-body);
   color: var(--body-text-color);
-  font-weight: bold;
-  letter-spacing: 0.1em;
-  padding: 0.5em;
-  position: relative;
   background-color: var(--off-white);
-  max-width: 15rem;
-  border-radius: 0.1rem;
-  text-transform: uppercase;
   text-decoration: none;
-  text-align: center;
+  width: 5rem;
+  height: 5rem;
+  align-self: center;
+  justify-content: center;
+  display: flex;
+  border-radius: 50%;
+  align-items: center;
   transition: 0.3s ease;
 }
-
 .read-more-button:hover {
-  background-color: rgba(215,181,140,1);
-  color: white;
-}
-#types-of-interventions:target {
-  scroll-margin-top: 10rem;
+  background-color: var(--color-pop);
+  color: var(--off-white);
 }
 .types-of-interventions {
-  background: var(--tertiary-color);
-  padding: 1rem;
-  padding-block: 4rem;
+  padding: 5rem 1rem;
   gap: 4rem;
   display: flex;
   flex-direction: column;
+  max-width: 70rem;
 }
 h1 {
   font: 2rem var(--font-headers);
@@ -222,29 +219,50 @@ h1 {
 /* List of benefits/drawbacks */
 .items-wrap {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
   gap: 2rem;
 }
 .item {
-  background: var(--body-text-color);
+  background: var(--accent-color);
   color: var(--off-white);
   padding: 2rem;
   border-radius: 0.25rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   justify-content: space-between;
+}
+.detail-page .item {
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  background: var(--off-white);
+  outline: var(--secondary-color);
+}
+.detail-page .item-description {
+  color: var(--body-text-color);
+}
+.detail-page .item-number {
+  color: var(--color-pop);
 }
 .item-intro {
   display: flex;
   gap: 1rem;
 }
+.item-intro.home {
+  flex-direction: column;
+  align-items: center;
+}
 .item-number,
 .item-title {
-  font: 1.25rem var(--font-body);
+  font: 2rem var(--font-logo);
   color: var(--tertiary-color);
-  font-weight: 200;
+  font-weight: 600;
   letter-spacing: 0.1em;
+  text-align: center;
+}
+.item-title {
+  color: var(--color-pop);
 }
 .item-description {
   grid-column: 1 / 3;
@@ -256,21 +274,31 @@ h1 {
   background: var(--body-text-color);
   height: 3rem;
   display: flex;
-  justify-content: center;
+  gap: 2rem;
   align-items: center;
+  justify-content: space-evenly;
+  padding-inline: 1rem;
   font: 1rem var(--font-body);
   color: var(--off-white);
+}
+.footer a {
+  text-decoration: none;
+  color: var(--off-white);
+}
+.social {
+  scale: 1.5;
 }
 .main-content {
   background: var(--tertiary-color);
   padding: 5rem 1rem;
+  max-width: 70rem;
   gap: 3rem;
   display: flex;
   flex-direction: column;
 }
 .main-content.contact {
-  gap: 1rem;
-  height: calc(100vh - 3rem);
+  gap: 3rem;
+  min-height: calc(100vh - 3rem);
 }
 .breadcrumb {
   font: 1rem var(--font-body);
@@ -296,7 +324,7 @@ h1 {
 }
 .container-content {
   display: grid;
-  grid-template-columns:  repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 3rem;
 }
 .container-content img {
@@ -307,9 +335,9 @@ h1 {
 .content-intro {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 }
-.content-t, .content-d {
+.content-d {
   color: var(--body-text-color);
   font-weight: 300;
 }
@@ -325,41 +353,55 @@ h1 {
 }
 .hero-button-2 {
   font: 1rem var(--font-body);
-  color: var(--body-text-color);
+  color: var(--off-white);
   font-weight: bold;
   letter-spacing: 0.1em;
   padding: 0.5em 2em;
-  border: 2px solid var(--body-text-color);
-  background-color: rgba(0, 0, 0, 0);
+  background-color: var(--accent-color);
+  border: 2px solid var(--accent-color);
   max-width: 15rem;
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
+  transition: 0.3s ease;
 }
 .hero-button-2:hover {
   color: var(--off-white);
   background: var(--body-text-color);
+  border: 2px solid var(--body-text-color);
 }
 .contact-form {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  max-width: 25rem;
+  max-width: 40rem;
+  background: var(--off-white);
+  box-shadow: -20px 20px 0px var(--secondary-color);
+  padding: 3rem;
 }
-input, textarea {
+input,
+textarea {
   padding: 0.5em;
-  border:0; 
+  border: 0;
   width: 100%;
   font: 1rem var(--font-body);
+  background: transparent;
+  border-block-end: 1px solid var(--color-pop);
 }
-input[type=text]:focus, input[type=email]:focus, textarea:focus {
+input[type="text"]:focus,
+input[type="email"]:focus,
+textarea:focus {
   outline: none;
 }
-input::placeholder, textarea::placeholder {
+input::placeholder,
+textarea::placeholder {
   opacity: 0.5;
 }
 /* Responsive */
 @media (min-width: 48rem) {
+  .content-d {
+    font-size: 1rem;
+  }
   .container-content img {
     order: 0;
   }
@@ -379,6 +421,19 @@ input::placeholder, textarea::placeholder {
   }
 }
 @media (min-width: 64rem) {
+  .item {
+    padding: 3rem;
+    gap: 3rem;
+  }
+  .hero-image {
+    width: 80%;
+    margin: 0 auto;
+    height: unset;
+    object-position: unset;
+    -webkit-mask-image: unset;
+    mask-image: unset;
+    box-shadow: -1.5rem 1.5rem 0px var(--secondary-color);
+  }
   header {
     padding: 1rem 5rem;
   }
